<resources>
    <string name="app_name">taskManagerApp</string>
    <string name="tasks_manager">Tasks Manager</string>
    <string name="allTasks">All Tasks</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="categories_text">Categories</string>
    <string name="tasks_to_do_text">Tasks To Do</string>
    <string name="button_text">Button</string>
    <string name="tasks_count">%s Tasks</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="dueString">Due : %s</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_information_input">Enter Task Information</string>
    <string name="create_task_text">Create Task</string>
    <string name="back">Back</string>
    <string name="low_text">Low</string>
    <string name="medium_text">Medium</string>
    <string name="high_text">High</string>
    <string name="priority_Text">Priority</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="add_new_category_text">Add New Category</string>
    <string name="choose_due">Choose Due Date and Time</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="select_priority">Select Priority</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_text">Add Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_color">Category Color</string>
    <string name="enter_category">Enter Category</string>
    <string name="add_color">Add Color</string>
    <string name="choose_Text">Choose Color</string>
    <string name="choose_color_text">Choose Color</string>
    <string name="chosed_time">%s, %s</string>
    <string name="error_date_title">No Date</string>
    <string name="error_date_message">Wrong date value , please choose a valid date</string>
    <string name="error_time_title">No Time</string>
    <string name="error_time_message">Wrong time value , time should be in the future</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="button_color">#D5D6D6</string>
    <string name="button_color_focused">#6E7070</string>
    <string name="exit_popup_window">exit popup window</string>
    <string name="add_task">Add Task</string>
    <string name="ok_text">Ok</string>
    <string name="error_priority_msg">Please choose a valid priority value of above</string>
    <string name="error_priority_title">No Priority</string>
    <string name="done_adding_task_title">Done</string>
    <string name="done_adding_task_message">New task is added ..</string>
    <string name="category_exist_title">Category Exists</string>
    <string name="category_exist_message">Your Entered category name is already exists, please choose it or enter another category name</string>
    <string name="tasks_count_text">%s Tasks</string>
    <string name="tasks_count_text_odd">%s Task</string>
    <string name="channel_name">TaskManagerApp</string>
    <string name="cahnnel_description">This is the task manager app channel</string>
</resources>