<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="#F3EFEF"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeNewCategoryPopupWindow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="-35dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/close_icon2"
        android:contentDescription="@string/exit_popup_window" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_horizontal"
        android:text="@string/add_category_text"
        android:textAlignment="center"
        android:textColor="#43A3EA"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_height="140dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="102dp"
        app:srcCompat="@drawable/categories2_icon"
        android:contentDescription="@string/category" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryNamePopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="Empty"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error_icon_2"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/error_text"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:hint="@string/enter_category" >

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="10"
            android:inputType="text"
            android:textSize="24sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/category_color"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_borders"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/newCategoryColor"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCategoryBtn"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/curvey_button"
            android:backgroundTint="#43A3EA"
            android:text="@string/add_category"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addColorButton"
            android:layout_width="146dp"
            android:layout_height="70dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/curvey_button"
            android:backgroundTint="#43A3EA"
            android:text="@string/add_color"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>