<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newTaskScreen.NewTaskActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="29dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="21dp"
        app:srcCompat="@drawable/back_arrow_icon"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="112dp"
        android:gravity="center"
        android:text="@string/create_task_text"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/task_information_input"
        android:inputType="text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/black_border"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/date_picker" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="Due Date"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="293dp"
        android:text="Completed"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="383dp"
        android:background="@drawable/black_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/exclamation_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/priority_Text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="435dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/curvey_button"
            android:backgroundTint="#D5D6D6"
            android:text="@string/low_text"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/curvey_button"
            android:backgroundTint="#D5D6D6"
            android:text="@string/medium_text"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/curvey_button"
            android:backgroundTint="#D5D6D6"
            android:text="@string/high_text"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>