<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/RelativeLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.homeScreen.HomeScreenActivity">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/categoriesRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginStart="10dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="10dp"
    android:scrollbars="none" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginStart="30dp"
    android:layout_marginTop="45dp"
    android:text="@string/categories_text"
    android:textAllCaps="true"
    android:textColor="#676565"
    android:textSize="30sp" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/categoriesRecyclerView"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    android:text="@string/tasks_to_do_text"
    android:textAllCaps="true"
    android:textColor="#676565"
    android:textSize="30sp" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/tasksRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/addNewTaskBtn"
    android:layout_below="@+id/categoriesRecyclerView"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="10dp"
    android:layout_marginTop="70dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="10dp"
    android:scrollbarSize="2dp"
    android:scrollbars="vertical" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addNewTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_task"
        app:backgroundTint="#42A4EB"
        app:cornerRadius="40dp"
        app:icon="@drawable/add_task_icon" />



</RelativeLayout>